<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainAct">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/main_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_18"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/main_java"
        style="@style/btn_normal"
        android:layout_margin="@dimen/dimen_20"
        android:onClick="onJavaCode"
        android:text="@string/java_code"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_title"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/main_kotlin"
        style="@style/btn_normal"
        android:layout_margin="@dimen/dimen_20"
        android:onClick="onKotlinCode"
        android:text="@string/kotlin_code"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_java"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>